tests/paczka1/small_fuzzy/59218745.err
Error in line 3: LtfvUQm A128 34,9
Error in line 7: VmbG A128 56,1
Error in line 13: VmbG A968 -2,6
